<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/base_form">

    <!-- 个人资料 -->

    <include layout="@layout/form_head" />

    <!-- 菜单 -->

    <View style="@style/view_line" />

    <!--夜间免打扰-->
    <LinearLayout
        style="@style/menu_item_list_layout_horizon">

        <TextView
            style="@style/menu_item_list_text"
            android:layout_weight="1"
            android:text="夜间免打扰" />


        <LinearLayout
            android:id="@+id/llbtn_dxset_xmhk"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginRight="@dimen/dp10"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgbtn_dxset_xmhk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/imgbtn_switch_on_green_off_white" />
        </LinearLayout>

    </LinearLayout>

    <View style="@style/view_line" />

    <!--夜间免打扰-->
    <LinearLayout
        style="@style/menu_item_list_layout_horizon">

        <TextView
            style="@style/menu_item_list_text"
            android:layout_weight="1"
            android:text="整点红包提醒" />


        <LinearLayout
            android:id="@+id/llbtn_whole_red"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginRight="@dimen/dp10"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgbtn_whole_red"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/imgbtn_switch_on_green_off_white" />
        </LinearLayout>

    </LinearLayout>

    <View style="@style/view_line" />

    <!--清除缓存-->
    <LinearLayout
        android:id="@+id/ll_menu_1"
        style="@style/menu_item_list_layout_horizon">

        <TextView
            style="@style/menu_item_list_text"
            android:layout_weight="1"
            android:text="@string/setting1" />

        <TextView
            android:id="@+id/tv_cacheSize"
            style="@style/menu_item_list_content"
            android:layout_marginEnd="@dimen/dp13"
            tools:text="6.5M" />


        <ImageView style="@style/menu_item_list_right_icon" />

    </LinearLayout>

    <View style="@style/view_line" />

    <!--检测更新-->
    <LinearLayout
        android:id="@+id/ll_menu_2"
        style="@style/menu_item_list_layout_horizon">

        <TextView
            style="@style/menu_item_list_text"
            android:layout_weight="1"
            android:text="@string/setting2" />

        <TextView
            android:id="@+id/tv_version"
            style="@style/menu_item_list_content"
            android:layout_marginEnd="@dimen/dp13"
            tools:text="1.0.0" />

        <ImageView style="@style/menu_item_list_right_icon" />

    </LinearLayout>

    <View style="@style/view_line" />

    <View
        style="@style/view_line"
        android:layout_marginTop="@dimen/dp20" />

    <!--使用说明-->
    <LinearLayout
        style="@style/menu_item_list_layout_horizon">

        <TextView
            style="@style/menu_item_list_text"
            android:layout_weight="1"
            android:text="使用说明" />


        <ImageView style="@style/menu_item_list_right_icon" />

    </LinearLayout>

    <View style="@style/view_line" />

    <!--关于方寸红包-->
    <LinearLayout
        style="@style/menu_item_list_layout_horizon">

        <TextView
            style="@style/menu_item_list_text"
            android:layout_weight="1"
            android:text="关于方寸红包" />


        <ImageView style="@style/menu_item_list_right_icon" />

    </LinearLayout>

    <View style="@style/view_line" />

    <!--注销账号-->
    <LinearLayout
        android:id="@+id/ll_menu_3"
        style="@style/menu_item_list_layout_horizon">

        <TextView
            android:id="@+id/tv_Exitaccount"
            style="@style/menu_item_list_text"
            android:layout_weight="1"
            android:text="@string/setting3" />


        <ImageView style="@style/menu_item_list_right_icon" />

    </LinearLayout>

</LinearLayout>